--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <li><a href="#">Something else here</a></li>
               </ul>
             </li>
+            <li><a href="#">Equipe</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
