--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         </div>
       </div>
     </div>
+     <hr>
+    <footer>
+       <p>&copy; 2016 Company, Inc.</p>
+    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
