--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gerenciamento de mudanças <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Buzilla</a></li>
+                <li><a href="#">Bugzilla</a></li>
                 <li><a href="#">Trac</a></li>
               </ul>
             </li>
