Adicionando links ao index e git.html

--- a/git.html
+++ b/git.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Café com gerência</a>
+          <a class="navbar-brand" href="index.html">Café com gerência</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,68 +39,48 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Controle de versão <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="git.html">Git</a></li>
-                <li><a href="#">Mercurial</a></li>
+                <li><a href="mercurial.html">Mercurial</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gerenciamento de mudanças <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Bugzilla</a></li>
-                <li><a href="#">Trac</a></li>
+                <li><a href="bugzilla.html">Bugzilla</a></li>
+                <li><a href="trac.html">Trac</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Integração contínua <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Maven</a></li>
-                <li><a href="#">CCTray</a></li>
+                <li><a href="maven.html">Maven</a></li>
+                <li><a href="cctray.html">CCTray</a></li>
               </ul>
             </li>
-            <li><a href="#">Equipe</a></li>
+            <li><a href="equipe.html">Equipe</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <div class="jumbotron">
-      <h1>Hello, world!</h1>
-      <p>...</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-    </div>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <h1>Conhecendo o GIT</h1>
+      <hr>
+      <p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O GIT é um sistema de controle de versão, onde podemos desenvolver projetos de forma colaborativa, ou seja, várias pessoas podem contribuir simultaneamente, editando arquivos já existentes
+			ou criando novos arquivos no determinado projeto sem riscos de substituição do trabalho já existente.
+		</br></br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A importância do sistema de controle de versão se dá devido a organização que ele proporciona quando várias pessoas trabalham em conjunto no projeto, sem um sistema assim, projetos
+			levariam muito mais tempo para serem finalizados, imaginando situações ondem dois ou mais colaboradores trabalham em um mesmo arquivo ao mesmo tempo, provavelmente uma boa parte da
+			informação correria o risco de ser sobrescrita.
+		</br></br>		
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Atualmente existem alguns serviçoes na web que oferecem diversas funcionalidades extras aplicadas ao GIT, dentre os mais conhecidos, temos o GitHub, GitLab e Bitbucket.
+			Eles oferecem um repositório remoto, onde você pode salvar o seu projeto e trabalhar nele localmente sem correr risco de perder suas informações acerca do projeto.	
+      </p>
+		<h2>Instalando o GIT</h2>
+		<p>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</p>
     </div>
-     <hr>
+    <hr>
     <footer>
        <p>&copy; 2016 Company, Inc.</p>
     </footer>
