adicionando texto do mercurial

--- a/mercurial.html
+++ b/mercurial.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Café com gerência</a>
+          <a class="navbar-brand" href="index.html">Café com gerência</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,33 +38,43 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Controle de versão <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Git</a></li>
-                <li><a href="#">Mercurial</a></li>
+                <li><a href="git.html">Git</a></li>
+                <li><a href="mercurial.html">Mercurial</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gerenciamento de mudanças <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Bugzilla</a></li>
-                <li><a href="#">Trac</a></li>
+                <li><a href="bugzilla.html">Bugzilla</a></li>
+                <li><a href="trac.html">Trac</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Integração contínua <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Maven</a></li>
-                <li><a href="#">CCTray</a></li>
+                <li><a href="maven.html">Maven</a></li>
+                <li><a href="cctray.html">CCTray</a></li>
               </ul>
             </li>
-            <li><a href="#">Equipe</a></li>
+            <li><a href="equipe.html">Equipe</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
-      <h1>Escreva aqui</h1>
+      <h1>Mercurial</h1>
       <hr>
       <p>
+        O Mercurial é um moderno sistema de controle de versões descentralizado e gratis que facilita do desenvolvimento integrado de softwares, tornando o processo dde desenvolvimento de softwares algo bem mais rápido e continuo.
+      </p>
+      <p>
+        Esse projeto foi iniciado em 2005, onde estava sendo desenvolvido outro sistema, o Git, esses dois projetos foram desenvolvidos para servirem de concorrencia a um sistema obsoleto, o BitKeeper. O mercurial entrou na disputa para ser incorporado ao kernel do linux, mas o Git foi tão forte que ganhou a disputa. Mesmo com o detrimento da plataforma, hoje em dia, o mercurial ainda é bastante usado.
+      </p>
+      <p>
+        Link do site da ferramenta:
+      </p>
+      <p>
+        <a href="https://www.mercurial-scm.org/">https://www.mercurial-scm.org/</a>
       </p>
     </div>
     <hr>
