git.html finalizado

--- a/git.html
+++ b/git.html
@@ -62,22 +62,31 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
-      <h1>Conhecendo o GIT</h1>
+      <h1>Conhecendo o Git</h1>
       <hr>
       <p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O GIT é um sistema de controle de versão, onde podemos desenvolver projetos de forma colaborativa, ou seja, várias pessoas podem contribuir simultaneamente, editando arquivos já existentes
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O Git é um sistema de controle de versão, onde podemos desenvolver projetos de forma colaborativa, ou seja, várias pessoas podem contribuir simultaneamente, editando arquivos já existentes
 			ou criando novos arquivos no determinado projeto sem riscos de substituição do trabalho já existente.
 		</br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A importância do sistema de controle de versão se dá devido a organização que ele proporciona quando várias pessoas trabalham em conjunto no projeto, sem um sistema assim, projetos
 			levariam muito mais tempo para serem finalizados, imaginando situações ondem dois ou mais colaboradores trabalham em um mesmo arquivo ao mesmo tempo, provavelmente uma boa parte da
 			informação correria o risco de ser sobrescrita.
 		</br></br>		
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Atualmente existem alguns serviçoes na web que oferecem diversas funcionalidades extras aplicadas ao GIT, dentre os mais conhecidos, temos o GitHub, GitLab e Bitbucket.
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Atualmente existem alguns serviçoes na web que oferecem diversas funcionalidades extras aplicadas ao Git, dentre os mais conhecidos, temos o GitHub, GitLab e Bitbucket.
 			Eles oferecem um repositório remoto, onde você pode salvar o seu projeto e trabalhar nele localmente sem correr risco de perder suas informações acerca do projeto.	
       </p>
-		<h2>Instalando o GIT</h2>
+		<h2>Instalando o Git</h2>
 		<p>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<center><b>Linux:</b></center>
+			Para distribuições Debian, como o Ubuntu, basta digitar no terminal: <pre>$ sudo apt-get install git</pre>
+			Ou para distribuições fedora, podemos usar o yum: <pre>$ yum install git-core</pre>
+			<center><b>Mac:</b></center>
+			Podemos instalar o Git no Mac através de duas maneiras, a primeira é utilizar o instalador gráfico disponível no SourceForge:<pre>http://sourceforge.net/projects/git-osx-installer/</pre>
+			Ou podemos instalar via MacPorts, utilizando o comando: <pre>$ sudo port install git-core +svn +doc +bash_completion +gitweb</pre>
+			<center><b>Windows:</b></center>
+			Instalar o Git no Windows é muito fácil, simpliesmente baixamos o executável do link abaixo e logo em seguida instalamos:<pre>http://msysgit.github.com</pre>
+			</br></br>
+			Para aprender mais sobre o Git, a documentação se encontra no link abaixo: <pre>https://git-scm.com/documentation</pre>
 		</p>
     </div>
     <hr>
