--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Café com gerência</a>
+          <a class="navbar-brand" href="index.html">Café com gerência</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,42 +39,42 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Controle de versão <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="git.html">Git</a></li>
-                <li><a href="#">Mercurial</a></li>
+                <li><a href="mercurial.html">Mercurial</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gerenciamento de mudanças <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Bugzilla</a></li>
-                <li><a href="#">Trac</a></li>
+                <li><a href="bugzilla.html">Bugzilla</a></li>
+                <li><a href="trac.html">Trac</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Integração contínua <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Maven</a></li>
-                <li><a href="#">CCTray</a></li>
+                <li><a href="maven.html">Maven</a></li>
+                <li><a href="cctray.html">CCTray</a></li>
               </ul>
             </li>
-            <li><a href="#">Equipe</a></li>
+            <li><a href="equipe.html">Equipe</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class="jumbotron">
-      <h1>Hello, world!</h1>
-      <p>...</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <h1>Bem vindo!</h1>
+      <p>Saiba mais sobre nossa equipe.</p>
+      <p><a class="btn btn-primary btn-lg" href="equipe.html" role="button">Equipe</a></p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="..." alt="...">
+            <img src="images\cv.jpg" alt="...">
             <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <h3>Controle de versão</h3>
+              <p>Leia mais!</p>
+              <p><a href="git.html" class="btn btn-primary" role="button">Git</a> <a href="mercurial.html" class="btn btn-primary" role="button">Mercurial</a></p>
             </div>
           </div>
         </div>
