--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="images\cv.jpg" alt="...">
+            <img style="width:380px;height:246px" src="images\cv.jpg" alt="...">
             <div class="caption">
               <h3>Controle de versão</h3>
               <p>Leia mais!</p>
@@ -80,11 +80,11 @@
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="..." alt="...">
+            <img src="images\gm.jpg" alt="...">
             <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <h3>Gerenciamento de mudanças</h3>
+              <p>Leia mais!</p>
+              <p><a href="bugzilla.html" class="btn btn-primary" role="button">Bugzilla</a> <a href="trac.html" class="btn btn-primary" role="button">Trac</a></p>
             </div>
           </div>
         </div>
