Adicionando modificação no email de david e adicionando as páginas do trac e do cctray

--- a/equipe.html
+++ b/equipe.html
@@ -70,7 +70,7 @@
               <h3>José David Emanoell F. Braga </h3>
                <p>
                  Graduando em Análise e Desenvolvimento de Sistemas - IFPB - Cajazeiras <br>
-                 Email: hex_cz@hotmail.com <br>
+                 Email: j.d.emanoell@gmail.com <br>
                  Facebook: <a href="https://www.facebook.com/david.emanoell?fref=ts" target="_blank">David Emanuell</a>
                </p>
 
