index.html finalizado

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         </div>
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="..." alt="...">
+            <img src="images\ic.jpg" alt="...">
             <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              <h3>integração contínua</h3>
+              <p>Leia mais!</p>
+              <p><a href="maven.html" class="btn btn-primary" role="button">Maven</a> <a href="cctray.html" class="btn btn-primary" role="button">CCTray</a></p>
             </div>
           </div>
         </div>
