--- a/bugzilla.html
+++ b/bugzilla.html
@@ -67,6 +67,7 @@
       <p>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O Bugzilla é uma ferramenta web de Gerenciamento de mudanças open source, responsável por gerenciar bugs reportados em projetos de desenvolvimento.
 		Originalmente desenvolvido pela Fundação Mozilla, ele pode ser utilizado em vários sistemas operacionais como Windows, Mac e Linux.
+		continue aqui
 	  </p>
     </div>
     <hr>
