--- a/bugzilla.html
+++ b/bugzilla.html
@@ -63,12 +63,33 @@
     </nav>
     <div class="container">
       <h1>Tratando bugs: Bugzilla</h1>
+      <h6><b>Publicado por David no dia 24/09/2016 as 18:36 horas.</b></h6>
       <hr>
       <p>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O Bugzilla é uma ferramenta web de Gerenciamento de mudanças open source, responsável por gerenciar bugs reportados em projetos de desenvolvimento.
-		Originalmente desenvolvido pela Fundação Mozilla, ele pode ser utilizado em vários sistemas operacionais como Windows, Mac e Linux.
-		continue aqui
+		Originalmente desenvolvido pela Fundação Mozilla para apoiar o desenvolvimento do seu navegado, o Mozilla Firefox, é atualmente utilizado em grande número de projetos de software
+		tanto livres quanto proprietários. Pode ser utilizado em vários sistemas operacionais como Windows, Mac e Linux.</br></br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As operações principais oferecidas ao usuário são simples e diretamente ligadas às atividades de manutenção: a criação de um novo bug; sua triagem,
+		revisão, escalonamento, discussão e fechamento; e a obtenção de relatórios e consultas baseados em propriedades do bug. Para suportar essas operações, o Bugzilla implementa várias
+		características, como:
+		<ul>
+			<li>Contas de usuário;</li>
+			<li>Formulário do Bug;</li>
+			<li>Comentários;</li>
+			<li>Gerenciador de anexos;</li>
+			<li>Interface de consulta;</li>
+			<li>Integração com o correio eletrônico.</li>
+		</ul>
 	  </p>
+	  <h2>Instalando o Bugzilla</h2>
+	  <p>
+		<center><b>Linux, Windows e Mac:</b></center>
+		A melhor maneira de se obter o Bugzilla no linux (e Windows) é clonando através do Git (baixar o git para o Windows no site http://git-scm.com/download): 
+		<pre>git clone --branch release-X.X-stable https://github.com/bugzilla/bugzilla</pre>
+		Execute o comando acima na sua pasta Raiz (para o Windows use a pasta C:\bugzilla), substituindo o "X.X" pelo número de 2 digitos da versão que você deseja (ex: 4.4).
+		</br></br>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A documentação do Bugzilla está disponível no seguinte link: <pre>https://www.bugzilla.org/docs/</pre>
+      </p>
     </div>
     <hr>
     <footer>
