--- a/git.html
+++ b/git.html
@@ -73,21 +73,21 @@
 			levariam muito mais tempo para serem finalizados, imaginando situações ondem dois ou mais colaboradores trabalham em um mesmo arquivo ao mesmo tempo, provavelmente uma boa parte da
 			informação correria o risco de ser sobrescrita.
 		</br></br>		
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Atualmente existem alguns serviçoes na web que oferecem diversas funcionalidades extras aplicadas ao Git, dentre os mais conhecidos, temos o GitHub, GitLab e Bitbucket.
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Atualmente existem alguns serviços na web que oferecem diversas funcionalidades extras aplicadas ao Git, dentre os mais conhecidos, temos o GitHub, GitLab e Bitbucket.
 			Eles oferecem um repositório remoto, onde você pode salvar o seu projeto e trabalhar nele localmente sem correr risco de perder suas informações acerca do projeto.	
       </p>
 		<h2>Instalando o Git</h2>
 		<p>
 			<center><b>Linux:</b></center>
 			Para distribuições Debian, como o Ubuntu, basta digitar no terminal: <pre>$ sudo apt-get install git</pre>
-			Ou para distribuições fedora, podemos usar o yum: <pre>$ yum install git-core</pre>
+			Ou para distribuições Fedora, podemos usar o yum: <pre>$ yum install git-core</pre>
 			<center><b>Mac:</b></center>
 			Podemos instalar o Git no Mac através de duas maneiras, a primeira é utilizar o instalador gráfico disponível no SourceForge:<pre>http://sourceforge.net/projects/git-osx-installer/</pre>
 			Ou podemos instalar via MacPorts, utilizando o comando: <pre>$ sudo port install git-core +svn +doc +bash_completion +gitweb</pre>
 			<center><b>Windows:</b></center>
-			Instalar o Git no Windows é muito fácil, simpliesmente baixamos o executável do link abaixo e logo em seguida instalamos:<pre>http://msysgit.github.com</pre>
+			Instalar o Git no Windows é muito fácil, simplesmente baixamos o executável do link abaixo e logo em seguida instalamos:<pre>http://msysgit.github.com</pre>
 			</br></br>
-			Para aprender mais sobre o Git, a documentação se encontra no link abaixo: <pre>https://git-scm.com/documentation</pre>
+			Para aprender mais sobre o Git, a documentação encontra-se no link abaixo: <pre>https://git-scm.com/documentation</pre>
 		</p>
     </div>
     <hr>
