--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="thumbnail">
             <img src="images\ic.jpg" alt="...">
             <div class="caption">
-              <h3>integração contínua</h3>
+              <h3>Integração contínua</h3>
               <p>Leia mais!</p>
               <p><a href="maven.html" class="btn btn-primary" role="button">Maven</a> <a href="cctray.html" class="btn btn-primary" role="button">CCTray</a></p>
             </div>
