--- a/maven.html
+++ b/maven.html
@@ -93,7 +93,7 @@
 		<center><b>Mac:</b></center>
 		No Mac, como no Windows faça o download no mesmo link, mas ao invés da versão binária (.bin), baixe a versão tar.gz. Logo em seguida adicione o caminho à variável de ambiente com
 		o seguinte código: <pre>export PATH=/opt/apache-maven-3.3.9/bin:$PATH</pre>
-		A documentação do Maven se encontra no seguinte link: <pre>http://maven.apache.org/guides/</pre>
+		A documentação do Maven encontra-se no seguinte link: <pre>http://maven.apache.org/guides/</pre>
     </p>
     </div>
     <hr>
