Terminando a página do mercurial

--- a/mercurial.html
+++ b/mercurial.html
@@ -63,12 +63,23 @@
     </nav>
     <div class="container">
       <h1>Mercurial</h1>
+      <h6><b>Publicado por Matheus no dia 27/09/2016 as 11:00 horas.</b></h6>
       <hr>
       <p>
         O Mercurial é um moderno sistema de controle de versões descentralizado e gratis que facilita do desenvolvimento integrado de softwares, tornando o processo dde desenvolvimento de softwares algo bem mais rápido e continuo.
       </p>
       <p>
         Esse projeto foi iniciado em 2005, onde estava sendo desenvolvido outro sistema, o Git, esses dois projetos foram desenvolvidos para servirem de concorrencia a um sistema obsoleto, o BitKeeper. O mercurial entrou na disputa para ser incorporado ao kernel do linux, mas o Git foi tão forte que ganhou a disputa. Mesmo com o detrimento da plataforma, hoje em dia, o mercurial ainda é bastante usado.
+      </p>
+      <h2>Instalando o Mercurial</h2>
+      <p>
+        <b>Linux</b> <br>
+        Para distribuições Debian, como o Ubuntu, basta digitar no terminal: <pre>$ sudo apt-get install mercurial</pre>
+        Ou para distribuições fedora, podemos usar o yum: <pre>$ yum install mercurial</pre>
+        <b>Mac:</b> <br>
+        Para instalar no Mac basta ir no seu terminal: <pre>$ brew install mercurial</pre>
+        <b>Windows</b><br>
+        Para instalar no windows basta ir no site linkado aqui em baixo. 
       </p>
       <p>
         Link do site da ferramenta:
